EE-875: UX CEDRI Progress Tracker * Fixes date subscript text wrapping up next to date in Progress Tracker

--- a/drupal/sites/all/themes/eenterprise/sass/styles.scss
+++ b/drupal/sites/all/themes/eenterprise/sass/styles.scss
@@ -1664,7 +1664,6 @@ span.date-subscript-text,
 span.item-subscript-text,
 .simple-dialog {
 	margin-top:10px;
-	display:inline-block;
 	text-transform: uppercase;
 }
 
